# sundai-rlvr-sqlExecutor

./: .gitignore  README.md  pyproject.toml
configs/rl/: sundai-sql-smoke.toml  sundai-sql.toml
environments/sundai_rlvr_sqlExecutor/: README.md  pyproject.toml  sundai_rlvr_sqlExecutor.py
environments/sundai_rlvr_sqlExecutor/databases/: README.md
environments/sundai_rlvr_sqlExecutor/databases/student_club/: student_club.sqlite
environments/sundai_rlvr_sqlExecutor/databases/superhero/: superhero.sqlite
environments/sundai_rlvr_sqlExecutor/databases/toxicology/: toxicology.sqlite
