[project]
name = "sundai-rlvr-sqlExecutor"
description = "Text-to-SQL RLVR with BIRD-style examples, SQLite execution rewards, and structured think/sql outputs."
tags = ["single-turn", "text-to-sql", "sqlite", "bird", "train", "eval"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
    "datasets>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "sundai_rlvr_sqlExecutor.py",
    "pyproject.toml",
    "databases/superhero/superhero.sqlite",
    "databases/student_club/student_club.sqlite",
    "databases/toxicology/toxicology.sqlite",
    "databases/README.md",
] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
